--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,9 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "axios": "^0.26.1",
     "express": "^4.17.3",
+    "install": "^0.13.0",
     "pg": "^8.7.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
