--- a/server/package.json
+++ b/server/package.json
@@ -12,9 +12,10 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
-    "date-fns": "^2.23.0",
+    "date-fns": "^2.28.0",
     "express": "^4.17.3",
     "nodemon": "^2.0.15",
-    "pg": "^8.7.3"
+    "pg": "^8.7.3",
+    "uuid": "^8.3.2"
   }
 }
