--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
     "axios": "^0.26.1",
+    "date-fns": "^2.28.0",
     "express": "^4.17.3",
     "install": "^0.13.0",
     "pg": "^8.7.3",
